Exercise 3-Blog Example standard solution

--- a/03-blog-example/assets/style.css
+++ b/03-blog-example/assets/style.css
@@ -144,12 +144,17 @@ a {
   .social-icons {
     display: none;
   }
+
+  main {
+    overflow: hidden;
+  }
 }
 
 .heading-decoration {
   position: absolute;
   top: -25px;
   right: 0px;
+  /* right: 18px; */
   width: 75px;
   height: 75px;
   background: papayawhip;
